@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX nss-3.12.6-gentoo-fixup-warnings.patch 301 SHA256 e14b227f762bd21875208e241029966b1e3873edfdf0592ca69bd9714859d329 SHA512 fcb47b120860436987858be53971f020db2d7c2f1bef1300bdca6dcf45d76a9b595c545112c1e7553ac29c412f72eafe3d29cd91ed1ab196b03146a7d8bc1870 WHIRLPOOL 1f59af79d4d7565185a3b841b3e936f7d3dddc642630d261be22c04d04cb0f8dfdd13ddacaa0fe8d69256fcffaee5fc273dfe73fc72f539abb5ed501dd1439c2
 AUX nss-3.14.1-gentoo-fixups-r1.patch 6370 SHA256 68a7e9f3f05d247825abe364e12289b7924e5e6f079d309b18aa7ef0be90d002 SHA512 8ac25987f330a34dd364ba4ea1eb9378813268d0a47dc6f287ece66184d88d2eb32fb80f8c6ea46815161ef54f6dac2960c8024ef443545d8ffdba43c10405e1 WHIRLPOOL fa45342b098c62daa6b8b798f8bcfec894743b264d50bd0c025f0395b91bd3c354547f4282fa8d9afcb5dd844f9f2590014657d881ab606cc71c2d84ba9ed7ce
@@ -18,23 +18,13 @@ DIST nss-3.15.1.tar.gz 6286561 SHA256 f994106a33d1f3210f4151bbb3419a1c28fd1cb545
 DIST nss-3.15.2.tar.gz 6288669 SHA256 7b2c80d18c49581edbdb509cbf7afd61d8c53658f2a38ff20e224c1909faeddc SHA512 f19889115ebd9f3214ee4faef11764d30936522c55aebe31bbed22073a39ca025559aa90ed96c973384b4f404c7179cffd212a63406e79f50213c0c991bb1c9e WHIRLPOOL 4464f0e56415871f22d89bd9c97c750088066d454d4d643f8475379e6372fa4f3a0839f49949d4024babfe1500250ef60d40358fca52e5133ee45ddc02bc2efd
 EBUILD nss-3.14.3.ebuild 8182 SHA256 07fd9b1be24b86907d60f4728971f2bf709a4de1bd4aa684b725f5c11122431c SHA512 9640c3483abe8cfd3001fa3f27987ff204b7b9b5129460669ce4393e5bbab1647bb1d2f60c36c4b2455efe21ad3505a927f47a665d80b35293da6beee99764d3 WHIRLPOOL 4ee6382780a9fd521c9afaaa903b92044694ecf93623d40b40ad1e5e87cb9948af8ad45e119e5ae0e3301c03d014aef4923bce955c12898689b44b2e9e03adb3
 EBUILD nss-3.15.1-r1.ebuild 7815 SHA256 303418e66e23756d4e75354b4386694b071f0922c00badb9cc0417e2d38e4b96 SHA512 5d2cff329cc98e4acfb442321b315eef9a1fdd75bb4a044346f3e7f84d536cc20038cc9dae1917387a7b573797cd5585d586c247c2242df3035228e31b0d1566 WHIRLPOOL 18b2579e1485b266a78f433bf53f5178e724652e553c09f7429925968809c71783d9cbe3bed2ce57537498e6c746fe6ab55dbbad5b31dc3a3b2ffa15e6dd4e6b
-EBUILD nss-3.15.2.ebuild 7520 SHA256 87140a308e97e3535e3d0346af4b2fd5d2f0025981f2b064c7bf1879c0d5c444 SHA512 06fa97adce27bce73198745d37e40772f0479c7189a31edf3af19783f4c53838db70e4d5208d89c6efa6cebc70c6b58689df53b79849bc98b126e8029eb2c3c8 WHIRLPOOL a277fa52be945f3bc2e9eaf7113c9bebfd487a58b5180dab7603f899331b068afa37ef345934135bdcfd0b6c02ae954bea97374748d0f24d3efb22f75b40fb31
-MISC ChangeLog 40254 SHA256 ddb70c0f77721d08e4af209d88d74569a26c254b78105a708270785ff584697d SHA512 45f34ab3ecef726fbf0f454fc9fc74124582a580b037d396ead2a0a4c3b54a1d7de21ded60bc66ec946ffca2d02d5245cc1ca6bf0f0de24de9a7fabad68ca54e WHIRLPOOL e1d58e24f96be5513fe5f3c116474000f92bcb7663fb3881fa972354a35ef72715042408a144d2bf8603b5ed3af76e47ae922d4039a9f79c7553ad3f36f47d10
+EBUILD nss-3.15.2.ebuild 7519 SHA256 6f5422c2883f6bb299ebe4a82abd716de4b2248a8f24bce0f8791eaf90bf867b SHA512 fd85aaadcdd990f993c6d7be07cbfeeef3d927c2fba58ebb4ca167db753a5da52e432e939901e245d3b026ac754d74d46076370b357c82dc56c719ee626e8009 WHIRLPOOL f5f3e49f53ae0ccddf07b137c5a386487953c0ab4715bee8cc58b381c6b01e8dca9f660f50b0efa29ac565ef75cc92effc068cf9dc59829d1db5d09c9e2f9fd5
+MISC ChangeLog 40354 SHA256 43af28d48a3492666e945a888c3418a4c8b92373a80f877c80208ed2df2c9dd4 SHA512 e83fc32a6ce383f733050ab039dfa0a64df4e2754f5434cf61e54a9a67f6b2c6f501beb490b43b36b09ef7e01b14e6ec50a6d76f4f0e286845afa452ce935392 WHIRLPOOL 8c7871190e5b7c668bdf342b9b6698475655a13d9e3216a4fae16c3be6864e28fceb458696c837c06709b86fb2c55cdc246da093cb8ec95fea99cfc4645911b7
 MISC metadata.xml 323 SHA256 e6fef8af50b09ae8cd84d42ca66b3716d47046ca2c643cb842a0cbc75196c1c5 SHA512 d4631c5de361b5b04d5ec36061fcb4762d47efd93b977c63e26d921109d0b2c2639f803442600b363c91937f2e5b2acd7ef0dde8b85abf801d814f8f70c20dfb WHIRLPOOL 38c7d7ccfbaf04fa026fe377b5810c187cf4da4c9c9f77ee0f80fc0d68bffd398a65eb37ec3457a351ec80405d0bd71ae09612efc6cff16e047ba01ec87ccac5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSSRjpAAoJELp701BxlEWfiWcP/1/ezsNRBDacqMTXZOQJPrY0
-cdTOW2XrJOv0Bh4KBIaWTbs4APHzbER4KAubOpxEufWgen9RHqEjkUUuiDQD5FEx
-UlLzkktXbVlUQGCYpoArTKigEO8zEEfxqz03r0oSt1Ns/TVfCwoWx8ft3jZj0CWu
-azktFZ90S8X/PhHuQJLK7Tvao+Ag3DTBmelql3I5a9lGCou1LgshrgUN1NfIEyiR
-5ywIHyjF8ZBK0ef04JGASqJvZwV4bce7DcAWXZFq8DaYXFOSeVrMsxyqqyBXp9Aq
-HVuE5xJLSPHAgH5gcKag/QUFtRsyh7Sc3MpBg8H5aNpwpUgEc30n6rvgwzUq3kl8
-1VmbXCDGs7i0f+Na/r6XgV9U0GEmiMqLeENidBhLZTKCkZcEElWrQg2i5z5oDlt3
-Sig5VEDkRzZZNcEqgItSCdnMMeKrgt9gCX5laf2yApU0J9Ms0GmNcmJ8ljENvqUV
-aDxOkyAcHQ2aT/7AhfwvsVxDjkmsckCnlBj95HwND6A66ac+VCBDMlCScdT/Gl+Y
-PMlivRlf9GcvH6OJmR0GDuA9TuBnkApon2sF2odR0RMkeYuRDFWBzXaV984WXsXq
-4KEH5xO7XbAbUgjj2qlW3SCuHQZMlZ9lJvVxarW73LJUp10o9p63lfJ0ZW9SQhsl
-jPJ1xeizyJOxoxrgJsgk
-=FdNY
+iEYEAREIAAYFAlJKzUUACgkQVWmRsqeSphPkPACcDRqXIBED7ffKxdO06HIr8UcB
+IyIAnAovaTS2/mHqsXI23t+elbfiUjsw
+=ILvu
 -----END PGP SIGNATURE-----
