@@ -8,14 +8,14 @@ DIST Smarty-3.1.8.tar.gz 199634 SHA256 49d3827cf84e8943a9bbf7e4b7229b1880cbb864d
 DIST manual-en-3.1.8.zip 413723 SHA256 83c06b1acc3e921b08c6c0076cc1ea888654244d3fbb5cc2f2a78d17a41dceae SHA512 644fda80416572cc8e2e7e757ee76afdfd1ff466c923a57091fc31182bc2a53e71d1a0a0d4970ca91f93ff60795ce943a14da2333af97b2eb4fa4e0802798fa1 WHIRLPOOL 476a56af0bd85c259a887ca221b260027ace493af17c528c8dd8d41c0767b6a77f0cc5e57783990aabd0839b5e7380056ad0081429c28bf56cc9836aa8445e00
 EBUILD smarty-2.6.24.ebuild 1371 SHA256 bee1c19c1e8724740e8df03795078b6db0941849a63499773fdde838746715e8 SHA512 1610e87280054911be9954402579563c5f2fdac900a44219e22ed4b5f617155257cdaa76644d36192a444a9ed443a81f787630b5ef17cead9c20947164a31140 WHIRLPOOL 58d6642db6fbe77abfd71efb783643f42eeb6150a8b155c1fe827ac1ba722050ec96d26b847d9cb1f4274fbf2ca670d96b353469769f1bfbf2ec7d3c0f4e1950
 EBUILD smarty-2.6.27.ebuild 1055 SHA256 6bbaeafe941f60424af797dbd706733685751379ca183269c5422cac201afca4 SHA512 6e5ac0b2df9cf7595b2bec67439bf569a509723c872c83e6f2ddb8c4111cf640564e0def1ef0c108fc709593e6a6712d1ed4c9ee7f1e9ef8b92a023e8efd9c34 WHIRLPOOL 073457cf83f5c8dd03621c48cd61686fdc3ea17acfc61c0ce807168b3b422d4792eea1931c60160b50e4bd1d85b02fa3f0535f512c782705f76d5bbadcf18612
-EBUILD smarty-3.1.12.ebuild 1144 SHA256 7ebca509f3b4a85daf5568230d6b976317689ee69510245ee1a87fa3712e1e7d SHA512 92105e23d7b9ad5b3076201597a6357022d64c76eb459633b08769e49ce2c69dcd8210c1bfa44951989bee52b09cd93c0194ac5a5449ea925b62d29385f6011f WHIRLPOOL 2ef365e086246967b56455c53e5ce7c06bec4c28e4f9809142f114675bd502a2222224eb7aa05ab468ddbbd4635cbf6a0ed4dbaa6e0c595ce5c9c4b49902f0c5
+EBUILD smarty-3.1.12.ebuild 1142 SHA256 38dbb16a4f153be4baed1eb50e222d613d7524c67940cef905bb6cd58b11301c SHA512 dd09e1e0612fe14fc31d34959bb5b2cb4c637df859a787960a06562dd7d9fb7ff52247f469b0f123a63e3261935e78b3bda3c214fc786b81e02d081268ba26bf WHIRLPOOL 6d840aac47d7fc3c9af78cd6607da571577ae2e0e288a02fafcf90366c899089d773aea67492a1eab7316748b25fcd0b8b56d7e493f87d5ac240013179988fb5
 EBUILD smarty-3.1.8.ebuild 1288 SHA256 f15eb816ef44b2971971f6590b76bfc0e5c185126b9808c2ddb636ce63d76959 SHA512 ea9d407298fb8912686d61b2b66bebb17a1d54e5bc5a62832ca0957cf51e529e1a93afa25abf109dc3efba9c9e4e41b0d5ce563a385d3361fbb5a2cb033f4322 WHIRLPOOL ed272e2d3fe57f1bf492c2b58ebc6adec95cc0ddf68fd8d3c4794f76cbdaab3334acd2c2d2810935d1472878845d6403de0dc56a53227b8039b1b2f8b61c6c4d
-MISC ChangeLog 14426 SHA256 4b165ded386178b019e020fb96028f4198f8b0f9d0664f466504135c64f793f0 SHA512 78d7d215e13cd8a2c3e9dd92fb48c099776defd5ca8f2c5350c6d104b82e4dd2f8b5c175c5466a227bb9f09425b93d952e6bafde61c0bed894776f42e41d0ba8 WHIRLPOOL 833efb9b796f04304dd0de381bcac0128322e27ed7af68a4ab2aa4b5b5045505a7128cf952304c8903b869fa6314cdfbfbabbf3de2a4cab057bc3524121c7c46
+MISC ChangeLog 14528 SHA256 f2a68689891d014fa96615f01f92083d5f63fdf488ee37ec629d23cba3ffb54a SHA512 12be14f49df4a37af498a682e6e269c13e553d351e38d10f53e504418e1890fe153c74e0bc6e21f1fb9effc5fcccfc92f1a6ddb22e303afaf813b06d091bd35d WHIRLPOOL 2c7bd06b20a7d6aec64d6ac76538c8cb3976ef9891c0e71698da40e227437f9232f0acdc25b7fa1d3b3a637375572ab28506335be0639bdecff5df89e27fb2f0
 MISC metadata.xml 417 SHA256 0f3577fdb1ae30c381e73047b39b57a7f8f1787a57160c9ad849ff178a9b9b41 SHA512 a8b2395d0c0bdf5e887fe33cbbf96ac7c3396ad6bb2da8bb1be844e1e9ecb70c9764462bc54e7384a7b3ef12992fb94f032dcf44831f96542c6009479c863373 WHIRLPOOL c9bae9bf45119228b7b9bfef46274e66aef3d53d5365791c77d9393bee22eb92dbe33b1bd91d88f73af0537113b87243b5ddc243e328ba48850c9ed0dbd81b46
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlFWzukACgkQfNMcoUhJ7GxWtACgrEa3II//rFLNJDbCauMl4jRh
-wboAn2p8Cs5vNRmz0YcQkIYGHZWD9rci
-=xIb5
+iEYEAREIAAYFAlJKzFcACgkQVWmRsqeSphPmmQCfZIQi0cSN55FzjoI0DuhxyX+2
+gx4Anj5++aS7PK6z6mbFcQ7oGnoaW3sB
+=p08y
 -----END PGP SIGNATURE-----
