@@ -4,9 +4,9 @@ DESCRIPTION=A template engine for PHP.
 EAPI=4
 HOMEPAGE=http://www.smarty.net/
 IUSE=doc
-KEYWORDS=~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86
+KEYWORDS=~alpha ~amd64 hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86
 LICENSE=LGPL-2.1
 RDEPEND=dev-lang/php
 SLOT=0
 SRC_URI=http://www.smarty.net/files/Smarty-3.1.12.tar.gz doc? ( http://www.smarty.net/files/docs/manual-en-3.1.8.zip )
-_md5_=ea45c51765ea50075d59f26de129e0d4
+_md5_=1a48020d6454733c1a85c405f7a7e622
