@@ -1,6 +1,9 @@
 # ChangeLog for dev-php/smarty
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/smarty/ChangeLog,v 1.113 2013/03/30 11:38:56 mabi Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/smarty/ChangeLog,v 1.114 2013/10/01 13:21:26 jer Exp $
+
+  01 Oct 2013; Jeroen Roovers <jer@gentoo.org> smarty-3.1.12.ebuild:
+  Stable for HPPA (bug #435618).
 
 *smarty-3.1.12 (30 Mar 2013)
 *smarty-2.6.27 (30 Mar 2013)
